Add validator api
