# config/swagger.json
@@ -313,6 +313,39 @@
                     }
                 }
             }
+        },
+        "/validators/{validator_address}": {
+            "get": {
+                "tags": [
+                    "validator"
+                ],
+                "summary": "get validator info",
+                "description": "",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "validator_address",
+                        "in": "path",
+                        "description": "validator_address",
+                        "required": true,
+                        "type": "string",
+                        "format": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
